# smart-money

./: .env.example  .gitignore  pyproject.toml
src/smart_money/: __init__.py  main.py
src/smart_money/analyzer/: __init__.py  anomaly.py  clustering.py  features.py  service.py
src/smart_money/api/: __init__.py  app.py
src/smart_money/api/routes/: health.py  signals.py  token_analysis.py  validator.py  wallets.py
src/smart_money/api/static/: index.html
src/smart_money/collector/: __init__.py  cache.py  pipeline.py  service.py
src/smart_money/collector/clients/: __init__.py  base.py  etherscan.py  okx_dex.py
src/smart_money/integration/: __init__.py  agent_coordinator.py  crypto_analysis_agent.py  smart_money_agent.py
src/smart_money/predictor/: __init__.py  service.py  signals.py  timeseries.py
src/smart_money/shared/: __init__.py  config.py  constants.py  events.py  interfaces.py  models.py
src/smart_money/validator/: __init__.py  backtest.py  breakout.py  fill_speed.py  service.py  volume_filter.py  wallet_performance.py
tests/: conftest.py
tests/test_analyzer/: test_clustering.py  test_features.py
tests/test_collector/: test_pipeline.py
tests/test_integration/: test_agent_coordinator.py
tests/test_predictor/: test_signals.py
tests/test_validator/: test_backtest.py  test_breakout.py  test_fill_speed.py  test_volume_filter.py  test_wallet_performance.py
